# github_copilot_for_ai_developers

./: README.md  mental_ai_notbook.ipynb  mental_server.py  pyproject.toml
dev_group/: Dockerfile  data_explore.ipynb  mental_server.py  pyproject.toml  readme.md  test_mental_server.py
dev_group/static/: a_instruct.txt  index.html  scripts.js  styles.css
static/: index.html  script.js  styles.css
