[tool.poetry]
name = "dev-group"
version = "0.1.0"
description = ""
authors = ["nirkon <nirk@originai.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
numpy = "^2.1.1"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
joblib = "^1.4.2"
wordcloud = "^1.9.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
